# serializer version: 1
# name: TestDataInclusionPrescriberStructure.test_list_structures
  dict({
    'num_queries': 5,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "prescribers_prescriberorganization"
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized"
          FROM "prescribers_prescriberorganization"
          ORDER BY "prescribers_prescriberorganization"."created_at" ASC,
                   "prescribers_prescriberorganization"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionPrescriberStructure.test_list_structures_date_maj_value
  dict({
    'num_queries': 5,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "prescribers_prescriberorganization"
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "prescribers_prescriberorganization"."id",
                 "prescribers_prescriberorganization"."address_line_1",
                 "prescribers_prescriberorganization"."address_line_2",
                 "prescribers_prescriberorganization"."post_code",
                 "prescribers_prescriberorganization"."city",
                 "prescribers_prescriberorganization"."department",
                 "prescribers_prescriberorganization"."coords",
                 "prescribers_prescriberorganization"."geocoding_score",
                 "prescribers_prescriberorganization"."geocoding_updated_at",
                 "prescribers_prescriberorganization"."ban_api_resolved_address",
                 "prescribers_prescriberorganization"."insee_city_id",
                 "prescribers_prescriberorganization"."name",
                 "prescribers_prescriberorganization"."created_at",
                 "prescribers_prescriberorganization"."updated_at",
                 "prescribers_prescriberorganization"."uid",
                 "prescribers_prescriberorganization"."active_members_email_reminder_last_sent_at",
                 "prescribers_prescriberorganization"."automatic_geocoding_update",
                 "prescribers_prescriberorganization"."siret",
                 "prescribers_prescriberorganization"."kind",
                 "prescribers_prescriberorganization"."is_brsa",
                 "prescribers_prescriberorganization"."phone",
                 "prescribers_prescriberorganization"."email",
                 "prescribers_prescriberorganization"."website",
                 "prescribers_prescriberorganization"."description",
                 "prescribers_prescriberorganization"."code_safir_pole_emploi",
                 "prescribers_prescriberorganization"."created_by_id",
                 "prescribers_prescriberorganization"."authorization_status",
                 "prescribers_prescriberorganization"."authorization_updated_at",
                 "prescribers_prescriberorganization"."authorization_updated_by_id",
                 "prescribers_prescriberorganization"."is_gps_authorized"
          FROM "prescribers_prescriberorganization"
          ORDER BY "prescribers_prescriberorganization"."created_at" ASC,
                   "prescribers_prescriberorganization"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures
  dict({
    'num_queries': 5,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures_antenne_with_user_created_and_999
  dict({
    'num_queries': 6,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 3
        ''',
      }),
      dict({
        'origin': list([
          'CompanyQuerySet.first[<site-packages>/django/db/models/query.py]',
          'CompanySerializer.get_siret[api/data_inclusion_api/serializers.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND NOT ("companies_company"."source" = %s)
                 AND "companies_company"."convention_id" = %s
                 AND "companies_company"."siret"::text LIKE %s)
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures_antenne_with_user_created_with_proper_siret
  dict({
    'num_queries': 5,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 3
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures_duplicated_siret
  dict({
    'num_queries': 5,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 2
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures_inactive_excluded
  dict({
    'num_queries': 4,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestDataInclusionSiaeStructure.test_list_structures_siret_with_999_and_no_other_siret_available
  dict({
    'num_queries': 6,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ServiceTokenAuthentication.authenticate_credentials[api/auth.py]',
        ]),
        'sql': '''
          SELECT "api_servicetoken"."id",
                 "api_servicetoken"."key",
                 "api_servicetoken"."service",
                 "api_servicetoken"."purpose",
                 "api_servicetoken"."created_at"
          FROM "api_servicetoken"
          WHERE "api_servicetoken"."key" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
        ''',
      }),
      dict({
        'origin': list([
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND ("companies_company"."kind" IN (%s,
                                                     %s,
                                                     %s,
                                                     %s)
                      OR ("companies_company"."is_searchable"
                          AND "companies_company"."kind" = %s)
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)))
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'CompanyQuerySet.first[<site-packages>/django/db/models/query.py]',
          'CompanySerializer.get_siret[api/data_inclusion_api/serializers.py]',
          'DataInclusionStructureView.list[<site-packages>/rest_framework/mixins.py]',
          'DataInclusionStructureView.list[api/data_inclusion_api/views.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."spontaneous_applications_open_since",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id"
          FROM "companies_company"
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND NOT ("companies_company"."source" = %s)
                 AND "companies_company"."convention_id" = %s
                 AND "companies_company"."siret"::text LIKE %s)
          ORDER BY "companies_company"."created_at" ASC,
                   "companies_company"."id" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
